# cloudsnake

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml  test.yml
docs/: links.md  poetry.md  rds.md
src/cloudsnake/: __main__.py  app_class.py  aws_client.py  aws_ec2.py  aws_session.py  aws_ssm.py  cli.py  ec2.py  helpers.py  logger.py  ssm.py  sso_oidc.py  tui.py
src/cloudsnake/cli/: cli.py  dto.py  ec2.py  rds.py  ssm.py  sso.py
src/cloudsnake/sdk/: app_class.py  aws.py  boto3_session.py  ec2.py  rds_session.py  session.py  ssm.py  ssm_parameter_store.py  ssm_session.py  sso_oidc.py
tests/: README.md  conftest.py  test_cli.py  test_ec2.py  test_helpers.py  test_logger.py  test_rds.py
