[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cloudsnake"
version = "0.4.0"
description = 'Wrapping some awscli commands with beautiful TUI'
authors = ["containerscrew <info@containerscrew.com>"]
repository = "https://github.com/containerscrew/cloudsnake"
documentation = "https://github.com/containerscrew/cloudsnake#readme"
keywords = ["aws","cli", "rich", "textual", "cloudsnake"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

include = [
    { path = "tests", format = "sdist" },
    { path = "CHANGELOG.md" }
]

[tool.poetry.scripts]
cloudsnake = 'cloudsnake.__main__:main'

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"
testfixtures = "^8.3.0"
moto = "^5.0.9"
pytest-cov = "^5.0.0"


[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.113"
dacite = "^1.8.1"
simple-term-menu = "^1.6.4"
typer = "^0.12.3"
typing-extensions = "^4.12.0"
rich = "^13.7.1"
jmespath = "^1.0.1"
moto = "^5.0.9"
requests = "^2.32.3"
